--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.7",
     "proxymise": "^1.0.2",
     "tsc": "^2.0.4",
+    "typescript": "^5.8.3",
     "zod": "^3.24.2"
   }
 }
