Improved swagTest logic by using a single browser, then from it get a context and from it get pages, this allows me to use beforeAll instead of beforeEach, which results in a significant performance improvement. Old implementation still available in swagTestSimpler.spec.ts

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "testErickHead": "npm run clean:allure && playwright test --headed",
     "testFacebook": "npm run clean:allure && npx playwright test facebookTest.spec.ts",
     "testSwag": "npm run clean:allure && npx playwright test swagTest.spec.ts",
+    "testSwagSimpler": "npm run clean:allure && npx playwright test swagTestSimpler.spec.ts",
     "testMaps": "npm run clean:allure && npx playwright test mapsTest.spec.ts",
     "testMapsSequential": "npm run clean:allure && npx playwright test mapsTestSequential.spec.ts",
     "testUnitTest": "npm run clean:allure && npx playwright test unitTest.spec.ts",
