--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.51.1",
+    "@playwright/test": "^1.52.0",
     "@types/node": "^22.7.0",
-    "allure-playwright": "^3.2.1",
     "rimraf": "^6.0.1"
   },
   "dependencies": {
     "chalk": "^5.4.1",
     "dotenv": "^16.4.7",
+    "playwright": "^1.52.0",
     "proxymise": "^1.0.2",
     "tsc": "^2.0.4",
     "typescript": "^5.8.3",
