Add regen script to package.json for generating Playwright reports

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "PlayWrightErick",
   "main": "index.js",
   "scripts": {
+    "regen" : "npx playwright show-report",
     "clean:allure": "rimraf allure-results",
     "testErick": "npm run clean:allure && playwright test",
     "testErickHead": "npm run clean:allure && playwright test --headed",
