--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "testSwag": "npm run clean:allure && npx playwright test swagTest.spec.ts",
     "testSwagSimpler": "npm run clean:allure && npx playwright test swagTestSimpler.spec.ts",
     "testMaps": "npm run clean:allure && npx playwright test mapsTest.spec.ts",
+    "testMapsService": "npm run clean:allure && npx playwright test mapsServiceTest.spec.ts",
     "testMapsSequential": "npm run clean:allure && npx playwright test mapsTestSequential.spec.ts",
     "testUnitTest": "npm run clean:allure && npx playwright test unitTest.spec.ts",
     "reportGenerate": "npx allure generate ./allure-results",
